# glyphmesh

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
assets-python/: Dockerfile  README.md  pyproject.toml
assets-python/glyphmesh_assets/: __init__.py  cli.py  generator.py  png.py  real.py  service.py
assets-python/tests/: test_assets.py
canvas-ts/: next.config.js  package.json
canvas-ts/app/: engine-worker.ts  layout.tsx  page.tsx
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
engine-rust/: Cargo.toml  build-wasm.sh
engine-rust/src/: geometry.rs  lib.rs  recognize.rs
proto/: protocol.md
scripts/: verify.py
sync-go/: Dockerfile  go.mod  main.go
sync-go/internal/crdt/: crdt.go  crdt_test.go
sync-go/internal/room/: room.go
sync-go/internal/ws/: ws.go  ws_test.go
