[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glyphmesh-assets"
version = "0.1.0"
description = "Procedural (offline) + optional real text-to-image asset service for glyphmesh"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akhil Vase" }]
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2"]
dev = ["pytest>=8", "ruff>=0.4", "fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2"]

[project.scripts]
glyphmesh-assets = "glyphmesh_assets.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["glyphmesh_assets*"]

[tool.ruff]
line-length = 100
