[package]
name = "glyphmesh_engine"
version = "0.1.0"
edition = "2021"
description = "Rust->Wasm geometry + shape recognition engine for glyphmesh"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
